force-app/main/default/objects/Product_Offerings__c/Product_Offerings__c.object-meta.xml
<CustomObject>
    <label>Product Offerings</label>
    <nameField>
        <label>Product Offerings  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>