force-app/main/default/objects/Product_Offerings__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>(Account__r.Owner.FirstName &amp; &quot; &quot; &amp; Account__r.Owner.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This data element shows the account owner&#39;s name.</inlineHelpText>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>