force-app/main/default/objects/Product_Offerings__c/fields/Campus_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Campus_Consultant__c</fullName>
    <formula>Account__r.Campus_Consultant__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Campus_Consultant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This data element shows the Campus Consultant for the account.</inlineHelpText>
    <label>Campus Consultant</label>
    <type>Text</type>
</CustomField>