force-app/main/default/objects/Product_Offerings__c/fields/Co_Branding__c.field-meta.xml
<CustomField>
    <fullName>Co_Branding__c</fullName>
    <label>Co-Branding?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Logo and Banner</fullName>
            </value>
            <value>
                <fullName>Logo Only</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>