force-app/main/default/objects/Product_Offerings__c/fields/EDMS__c.field-meta.xml
<CustomField>
    <fullName>EDMS__c</fullName>
    <label>EDMS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proactive</fullName>
            </value>
            <value>
                <fullName>Responsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>