force-app/main/default/objects/Product_Offerings__c/fields/Financial_Literacy__c.field-meta.xml
<CustomField>
    <fullName>Financial_Literacy__c</fullName>
    <label>Financial Literacy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SALT Courses</fullName>
            </value>
            <value>
                <fullName>Scholarship Search</fullName>
            </value>
            <value>
                <fullName>Job/Internship Search</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>