force-app/main/default/objects/Product_Offerings__c/fields/NSLDS_Files__c.field-meta.xml
<CustomField>
    <fullName>NSLDS_Files__c</fullName>
    <label>NSLDS Files</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Granted</fullName>
            </value>
            <value>
                <fullName>School Provides</fullName>
            </value>
            <value>
                <fullName>Access Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>