force-app/main/default/objects/Product_Offerings__c/fields/Promo_Tile__c.field-meta.xml
<CustomField>
    <fullName>Promo_Tile__c</fullName>
    <label>Promo Tile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>