force-app/main/default/objects/Product_Offerings__c/fields/Promotional_Items__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Items__c</fullName>
    <label>Promotional Items</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SALT Store</fullName>
            </value>
            <value>
                <fullName>Access to PDFs / eDocs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>