force-app/main/default/objects/Product_Offerings__c/fields/Ready_To_Submit__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A checkmark in this box will send an email alert to Della. She will review the item and, when approved, will submit it to Business Analysis for entry into the SALT Shaker.</inlineHelpText>
    <label>Ready To Submit</label>
    <type>Checkbox</type>
</CustomField>