force-app/main/default/objects/Product_Offerings__c/fields/Sends_Demog_File__c.field-meta.xml
<CustomField>
    <fullName>Sends_Demog_File__c</fullName>
    <inlineHelpText>This field indicates whether or not the customer provides us with a SALT Demographic File.</inlineHelpText>
    <label>Sends Demog File?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - w/ SS#</fullName>
            </value>
            <value>
                <fullName>Yes - w/ Unique ID</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>