force-app/main/default/objects/Product_Offerings__c/fields/Submit_to_BA__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_BA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit to BA</label>
    <type>Checkbox</type>
</CustomField>