force-app/main/default/objects/Product_Offerings__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Faculty/Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>