force-app/main/default/objects/Product_Offerings__c/fields/Vanity_URL__c.field-meta.xml
<CustomField>
    <fullName>Vanity_URL__c</fullName>
    <inlineHelpText>This field indicates whether or not the customer is using a SALT vanity URL.</inlineHelpText>
    <label>Vanity URL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>