force-app/main/default/objects/Product_Offerings__c/recordTypes/Engagement_Partner.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Partner</fullName>
    <active>true</active>
    <label>Engagement Partner</label>
</RecordType>