force-app/main/default/objects/Product_Offerings__c/validationRules/Proactive_EDMS_Requires_NSLDS_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Proactive_EDMS_Requires_NSLDS_Info</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL(EDMS__c,&#39;Proactive&#39;),

OR(ISPICKVAL(NSLDS_Files__c, &quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>NSLDS_Files__c</errorDisplayField>
    <errorMessage>You must provide a response for NSLDS Files if EDMS = Proactive.</errorMessage>
</ValidationRule>